--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /Viking\ Attack/[Bb]uilds/
 /Viking\ Attack/[Ll]ogs/
 /Viking\ Attack/[Uu]ser[Ss]ettings/
+/Viking\ Attack_clone_0/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
