--- a/Viking Attack/Packages/manifest.json
+++ b/Viking Attack/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.inputsystem": "1.3.0",
     "com.unity.probuilder": "4.5.2",
     "com.unity.purchasing": "4.1.3",
+    "com.unity.quicksearch": "2.0.2",
     "com.unity.render-pipelines.universal": "10.9.0",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
