Småändringar, lösningar, vissa borttag av onödig kod. Ändring av variabler så rider inte klagar

--- a/Viking Attack/Assets/Network/Mirror/Components/Mirror.Components.asmdef
+++ b/Viking Attack/Assets/Network/Mirror/Components/Mirror.Components.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Mirror.Components",
     "references": [
-        "Mirror"
+        "Mirror",
+        "UnityEngine.UI",
+        "UnityEditor.UI"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
