--- a/Viking Attack/Assets/Network/Mirror/Examples/Mirror.Examples.asmdef
+++ b/Viking Attack/Assets/Network/Mirror/Examples/Mirror.Examples.asmdef
@@ -3,7 +3,9 @@
     "references": [
         "Mirror",
         "Mirror.Components",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "UnityEngine.UI",
+        "UnityEditor.UI"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
