--- a/Viking Attack/Assets/Network/Mirror/Runtime/Transport/SimpleWebTransport/SimpleWebTransport.asmdef
+++ b/Viking Attack/Assets/Network/Mirror/Runtime/Transport/SimpleWebTransport/SimpleWebTransport.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "SimpleWebTransport",
     "references": [
-        "Mirror"
+        "Mirror",
+        "UnityEngine.UI",
+        "UnityEditor.UI"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
